--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  outline: none;
+}
+
 .no-scroll {
   scrollbar-width: thin;
   scrollbar-color: transparent transparent;
